Admin quiz CRUD added

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>ua.epam.rd</groupId>
   <artifactId>QuizSystem</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>QuizSystem</name>
   <url>http://maven.apache.org</url>
