--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,7 +33,8 @@
 	<servlet-mapping>
 		<servlet-name>dispacherServlet</servlet-name>
 		<url-pattern>/jsp/*</url-pattern>
-	</servlet-mapping>
+<!-- 		<url-pattern>/jsp/*</url-pattern>
+ --></servlet-mapping>
 
     
     <filter>
