--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,8 +37,13 @@
 
     
     <filter>
-    <filter-name>encodingFilter</filter-name>
-    <filter-class>   
+		<filter-name>indexPageFilter</filter-name>
+		<filter-class>ua.edu.rd.web.IndexPageFilter</filter-class>
+	</filter>
+	
+    <filter>
+    	<filter-name>encodingFilter</filter-name>
+   		<filter-class>   
       		org.springframework.web.filter.CharacterEncodingFilter    
    		</filter-class>
     <init-param>
@@ -49,12 +54,17 @@
       <param-name>forceEncoding</param-name>
       <param-value>true</param-value>
     </init-param>
-  </filter>
+	</filter>
     
     <filter>
-    <filter-name>springSecurityFilterChain</filter-name>
-    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    	<filter-name>springSecurityFilterChain</filter-name>
+    	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
+
+	<filter-mapping>
+		<filter-name>indexPageFilter</filter-name>
+		<url-pattern>/</url-pattern>
+	</filter-mapping>
 
 	<filter-mapping>
     <filter-name>encodingFilter</filter-name>
