--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -76,5 +76,10 @@
 	<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+<error-page>
+ <error-code>404</error-code>
+ <location>/jsp/404</location>
+</error-page>
+
 
 </web-app>
